--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-bold text-lg hidden lg:inline">A. </span><span class="font-bold text-lg">Words</span>
-                                <span class="text-sm font-light hidden md:block opacity-80">Expand your vocabulary.</span>
+                                <span class="font-semibold text-base hidden lg:inline">A. </span><span class="font-semibold text-base">Words</span>
+                                <span class="text-xs font-normal hidden md:block opacity-80">Expand your vocabulary.</span>
                             </div>
                         </button>
                         <button id="start-complete-phrase-btn" class="w-full bg-teal-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
@@ -42,8 +42,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-bold text-lg hidden lg:inline">B. </span>Complete</span>
-                                <span class="text-sm font-light hidden md:block opacity-80">Practice grammar and expressions.</span>
+                                <span class="font-semibold text-base hidden lg:inline">B. </span><span class="font-semibold text-base">Complete</span>
+                                <span class="text-xs font-normal hidden md:block opacity-80">Practice grammar and expressions.</span>
                             </div>
                         </button>
                         <button id="start-phrasal-verbs-btn" class="w-full bg-purple-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
@@ -51,8 +51,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-bold text-lg hidden lg:inline">C. </span>Phrasal Verbs</span>
-                                <span class="text-sm font-light hidden md:block opacity-80">Master verb combinations.</span>
+                                <span class="font-semibold text-base hidden lg:inline">C. </span><span class="font-semibold text-base">Phrasal Verbs</span>
+                                <span class="text-xs font-normal hidden md:block opacity-80">Master verb combinations.</span>
                             </div>
                         </button>
                         <button id="start-phrasal-verbs-completion-btn" class="w-full bg-rose-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-rose-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
@@ -60,8 +60,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V4a2 2 0 012-2h6.172a2 2 0 011.414.586l3.414 3.414A2 2 0 0117 8z"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-bold text-lg hidden lg:inline">D. </span><span class="font-bold text-lg hidden md:block">Complete Phrasal Verbs</span>                                <span class="font-bold text-lg block md:hidden">Verb Completion</span>
-                                <span class="text-sm font-light hidden md:block opacity-80">Test your phrasal verb knowledge.</span>
+                                <span class="font-semibold text-base hidden lg:inline">D. </span><span class="font-semibold text-base hidden md:block">Complete Phrasal Verbs</span>                                <span class="font-semibold text-base block md:hidden">Verb Completion</span>
+                                <span class="text-xs font-normal hidden md:block opacity-80">Test your phrasal verb knowledge.</span>
                             </div>
                         </button>
                         <button id="start-idioms-btn" class="w-full bg-orange-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
@@ -69,8 +69,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m1.636 6.364l.707-.707M6 9l2 2 4-4 6 6 2-2"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-bold text-lg hidden lg:inline">E. </span>Idioms</span>
-                                <span class="text-sm font-light hidden md:block opacity-80">Understand common expressions.</span>
+                                <span class="font-semibold text-base hidden lg:inline">E. </span><span class="font-semibold text-base">Idioms</span>
+                                <span class="text-xs font-normal hidden md:block opacity-80">Understand common expressions.</span>
                             </div>
                         </button>
                         <button id="start-idioms-challenge-btn" class="w-full bg-yellow-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-yellow-700 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
@@ -78,8 +78,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-bold text-lg hidden lg:inline">F. </span>Idioms Challenge</span>
-                                <span class="text-sm font-light hidden md:block opacity-80">Guess the meaning of idioms.</span>
+                                <span class="font-semibold text-base hidden lg:inline">F. </span><span class="font-semibold text-base">Idioms Challenge</span>
+                                <span class="text-xs font-normal hidden md:block opacity-80">Guess the meaning of idioms.</span>
                             </div>
                         </button>
                         <button id="start-used-to-btn" class="w-full bg-green-600 text-white p-2 md:p-8 rounded-xl shadow-lg hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 transition-all duration-200 active:scale-95 flex flex-col items-center justify-center text-center gap-2 aspect-square">
@@ -87,8 +87,8 @@
                                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path></svg>
                             </div>
                             <div class="text-center h-10">
-                                <span class="font-bold text-lg hidden lg:inline">G. </span>Used To</span>
-                                <span class="text-sm font-light hidden md:block opacity-80">Practice past habits and states.</span>
+                                <span class="font-semibold text-base hidden lg:inline">G. </span><span class="font-semibold text-base">Used To</span>
+                                <span class="text-xs font-normal hidden md:block opacity-80">Practice past habits and states.</span>
                             </div>
                         </button>
                     </main>
